--- a/Trianglequiz.html
+++ b/Trianglequiz.html
@@ -13,7 +13,7 @@
     <header class="header">
         <h2 class="son">Fun with Triangles</h2>
         <nav class="nav">
-            <span><a href="mark12.html" style="color: white;">Is Triangle</a></span>&nbsp;&nbsp;&nbsp;
+            <span><a href="index.html" style="color: white;">Is Triangle</a></span>&nbsp;&nbsp;&nbsp;
             <span><a href="Trianglequiz.html" style="color: white;">Quiz</a></span>&nbsp;&nbsp;&nbsp;
             <span><a href="hp.html" style="color: white;">Hypotenuse</a></span>&nbsp;&nbsp;&nbsp;
             <span><a href="at.html" style="color: white;">Area of Triangle</a></span>
@@ -93,9 +93,9 @@
     <div style="margin-top: 100px;text-align: center; margin-right: 50px;">
         <p>©| 2021|adarshbalika</p>
         <span>
-            <img src ="github.svg">
-            <img src="discord.svg">
-            <img src ="twitter.svg">
+            <a href="https://github.com/Gulnaaznasrin21?tab=repositories"><img src ="github.svg"></a>
+            <a href="https://discord.com/invite/qaGwEEB8eF"><img src="discord.svg"></a>
+            <a href="https://twitter.com/GulnaazNasrin?t=dJFgaiugHyf5jGLiQo9nhg&s=08"><img src ="twitter.svg"></a>
             <img src="instagram.svg">
 
         </span>
