--- a/at.html
+++ b/at.html
@@ -8,27 +8,27 @@
     <link rel="stylesheet" href="./at.css" />
     <title>Area of Triangle</title>
 </head>
-    <body >
+    <body class="background">
         <header class="header">
         <h2 class="son">Fun with triangles</h2>
         <nav class="nav">
-            <span><a href="index.html" style="color: white;">Is Triangle</a></span>&nbsp;&nbsp;&nbsp;
-            <span><a href="Trianglequiz.html" style="color: white;">Quiz</a></span>&nbsp;&nbsp;&nbsp;
-            <span><a href="hp.html" style="color: white;">Hypotenuse</a></span>&nbsp;&nbsp;&nbsp;
-            <span><a href="at.html" style="color: white;">Area of Triangle</a></span>
+            <span><a href="mark12.html" style="color: white; text-decoration: none;">Is Triangle</a></span>&nbsp;&nbsp;&nbsp;
+            <span><a href="Trianglequiz.html" style="color: white; text-decoration: none;">Quiz</a></span>&nbsp;&nbsp;&nbsp;
+            <span><a href="hp.html" style="color: white; text-decoration: none;">Hypotenuse</a></span>&nbsp;&nbsp;&nbsp;
+            <span><a href="at.html" style="color: white; text-decoration: none;">Area of Triangle</a></span>
         </nav>
     </header>
     <div class="cont">
-        <h1>Calculate Area of a triangle</h1>
+        <h1 style="color: rgb(76, 133, 150);">Calculate Area of a triangle</h1>
     <label for="sidee1" class="nan"><b>Enter Base</b></label>
         <input type="number" class="angle-input" />
     <label for="side2" class="nan"><b>Enter Height</b></label>
         <input type="number" class="angle-input"/>
    
     <button id="is-triangle-btn">Calculate</button>
-    <div id="output" style="font-size: 25px; color: black;"><b></b></div>
+    <div id="output" style="font-size: 25px; color:rgb(76, 133, 150); font-weight: bolder;"></b></div>
     </div>
-    <div style="margin-top: 150px;text-align: center; margin-right: 50px;">
+    <div style="margin-top: 150px;text-align: center; margin-right: 820px; margin-top: 19%;">
         <p>©| 2021|adarshbalika</p>
         <span>
             <a href="https://github.com/Gulnaaznasrin21?tab=repositories"><img src ="github.svg"></a>
@@ -37,10 +37,8 @@
             <img src="instagram.svg">
 
         </span>
-
-
-
     </div>
+
 
     <script src="./at.js"></script>
 </body>
