--- a/hp.html
+++ b/hp.html
@@ -10,27 +10,28 @@
 </head>
 <link rel="stylesheet" href="./hp.css" />
 
-<body>
+<body class="background">
 
     <header class="header">
         <h2 class="son">Fun with Triangles</h2>
         <nav class="nav">
-            <span><a href="index.html" style="color: white;">Is Triangle</a></span>&nbsp;&nbsp;&nbsp;
-            <span><a href="Trianglequiz.html" style="color: white;">Quiz</a></span>&nbsp;&nbsp;&nbsp;
-            <span><a href="hp.html" style="color: white;">Hypotenuse</a></span>&nbsp;&nbsp;&nbsp;
-            <span><a href="at.html" style="color: white;">Area of Triangle</a></span>
+            <span><a href="mark12.html" style="color: white; text-decoration: none;">Is Triangle</a></span>&nbsp;&nbsp;&nbsp;
+            <span><a href="Trianglequiz.html" style="color: white; text-decoration: none;">Quiz</a></span>&nbsp;&nbsp;&nbsp;
+            <span><a href="hp.html" style="color: white; text-decoration: none;">Hypotenuse</a></span>&nbsp;&nbsp;&nbsp;
+            <span><a href="at.html" style="color: white; text-decoration: none;">Area of Triangle</a></span>
         </nav>
     </header>
     
-    
-    <h1 id="non" style="color:black;">Calculate Hypotenuse of a triangle</h1>
-        <h2 id="non"><label>Enter base value(a)=</label></h2>
+    <div class="cont">
+    <h1 id="non" style="color:rgb(76, 133, 150);">Calculate Hypotenuse of a triangle</h1>
+        <h2 id="non"><label style="color: rgb(76, 133, 150);">Enter base value(a)=</label></h2>
             <input type="number" class="side-input"/>
-        <h2 id="non"><label>Enter base value(b)=</label></h2>
+        <h2 id="non"><label style="color: rgb(76, 133, 150);">Enter base value(b)=</label></h2>
             <input type="number" class="side-input"/>
     <button id="Hypotenuse-btn">Calculate Hypotenuse</button>
-    <div id="output"></div>
-    <div style="margin-top: 150px;text-align: center; margin-right: 50px;">
+    <div id="output"></div></div>
+   
+    <div style="margin-top: 150px;text-align: center; margin-right: 50px; margin-top: 21%;">
         <p>©| 2021|adarshbalika</p>
         <span>
             <a href="https://github.com/Gulnaaznasrin21?tab=repositories"><img src ="github.svg"></a>
@@ -39,10 +40,8 @@
             <img src="instagram.svg">
 
         </span>
-
-
-
     </div>
+   
 
     <script src="./hp.js"></script>
 </body>
