file name update

--- a/at.html
+++ b/at.html
@@ -12,7 +12,7 @@
         <header class="header">
         <h2 class="son">Fun with triangles</h2>
         <nav class="nav">
-            <span><a href="mark12.html" style="color: white; text-decoration: none;">Is Triangle</a></span>&nbsp;&nbsp;&nbsp;
+            <span><a href="index.html" style="color: white; text-decoration: none;">Is Triangle</a></span>&nbsp;&nbsp;&nbsp;
             <span><a href="Trianglequiz.html" style="color: white; text-decoration: none;">Quiz</a></span>&nbsp;&nbsp;&nbsp;
             <span><a href="hp.html" style="color: white; text-decoration: none;">Hypotenuse</a></span>&nbsp;&nbsp;&nbsp;
             <span><a href="at.html" style="color: white; text-decoration: none;">Area of Triangle</a></span>
