--- a/Trianglequiz.html
+++ b/Trianglequiz.html
@@ -91,7 +91,7 @@
 
 
     <div style="margin-top: 100px;text-align: center; margin-right: 50px;">
-        <p>©| 2021|adarshbalika</p>
+        <p>©| 2021|Gulnaaz</p>
         <span>
             <a href="https://github.com/Gulnaaznasrin21?tab=repositories"><img src ="github.svg"></a>
             <a href="https://discord.com/invite/qaGwEEB8eF"><img src="discord.svg"></a>
