--- a/at.html
+++ b/at.html
@@ -29,7 +29,7 @@
     <div id="output" style="font-size: 25px; color:rgb(76, 133, 150); font-weight: bolder;"></b></div>
     </div>
     <div style="margin-top: 150px;text-align: center; margin-right: 820px; margin-top: 19%;">
-        <p>©| 2021|adarshbalika</p>
+        <p>©| 2021|Gulnaaz</p>
         <span>
             <a href="https://github.com/Gulnaaznasrin21?tab=repositories"><img src ="github.svg"></a>
             <a href="https://discord.com/invite/qaGwEEB8eF"><img src="discord.svg"></a>
