--- a/hp.html
+++ b/hp.html
@@ -32,7 +32,7 @@
     <div id="output"></div></div>
    
     <div style="margin-top: 150px;text-align: center; margin-right: 50px; margin-top: 21%;">
-        <p>©| 2021|adarshbalika</p>
+        <p>©| 2021|Gulnaaz</p>
         <span>
             <a href="https://github.com/Gulnaaznasrin21?tab=repositories"><img src ="github.svg"></a>
             <a href="https://discord.com/invite/qaGwEEB8eF"><img src="discord.svg"></a>
