--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         
             <div style="margin-top: 150px;text-align: center; margin-right: 50px; margin-top: 9.7%;">
-                <p style="font-size: large;"><b>©| 2021|adarshbalika</b></p>
+                <p style="font-size: large;"><b>©| 2021|Gulnaaz</b></p>
                 <span>
                     <a href="https://github.com/Gulnaaznasrin21?tab=repositories"><img src ="github.svg"></a>
                     <a href="https://discord.com/invite/qaGwEEB8eF"><img src="discord.svg"></a>
